<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/yuyin_tv_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/yuyin_tv_hint"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/yuyin_et_input"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/yuyin_et_hint"
                android:inputType="number"
                android:textSize="30sp" />

            <Button
                android:id="@+id/yuyin_btn_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yuyin_btn_start"
                android:textSize="30sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:orientation="horizontal">

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars = "none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/anjian_g"
                        android:layout_width="60dp"
                        android:layout_height="75dp"
                        android:text="@string/anjian_g" />

                    <Button
                        android:id="@+id/anjian_k"
                        android:layout_width="60dp"
                        android:layout_height="75dp"
                        android:text="@string/anjian_k" />

                    <Button
                        android:id="@+id/anjian_h"
                        android:layout_width="60dp"
                        android:layout_height="75dp"
                        android:text="@string/anjian_h" />

                    <Button
                        android:id="@+id/anjian_j"
                        android:layout_width="60dp"
                        android:layout_height="75dp"
                        android:text="@string/anjian_j" />

                    <Button
                        android:id="@+id/anjian_q"
                        android:layout_width="60dp"
                        android:layout_height="75dp"
                        android:text="@string/anjian_q" />

                    <Button
                        android:id="@+id/anjian_x"
                        android:layout_width="60dp"
                        android:layout_height="75dp"
                        android:text="@string/anjian_x" />

                    <Button
                        android:id="@+id/anjian_b"
                        android:layout_width="60dp"
                        android:layout_height="75dp"
                        android:text="@string/anjian_b" />

                    <Button
                        android:id="@+id/anjian_p"
                        android:layout_width="60dp"
                        android:layout_height="75dp"
                        android:text="@string/anjian_p" />

                    <Button
                        android:id="@+id/anjian_f"
                        android:layout_width="60dp"
                        android:layout_height="75dp"
                        android:text="@string/anjian_f" />

                    <Button
                        android:id="@+id/anjian_d"
                        android:layout_width="60dp"
                        android:layout_height="75dp"
                        android:text="@string/anjian_d" />

                    <Button
                        android:id="@+id/anjian_t"
                        android:layout_width="60dp"
                        android:layout_height="75dp"
                        android:text="@string/anjian_t" />

                    <Button
                        android:id="@+id/anjian_l"
                        android:layout_width="60dp"
                        android:layout_height="75dp"
                        android:text="@string/anjian_l" />

                    <Button
                        android:id="@+id/anjian_zh"
                        android:layout_width="60dp"
                        android:layout_height="75dp"
                        android:text="@string/anjian_zh" />

                    <Button
                        android:id="@+id/anjian_ch"
                        android:layout_width="60dp"
                        android:layout_height="75dp"
                        android:text="@string/anjian_ch" />

                    <Button
                        android:id="@+id/anjian_sh"
                        android:layout_width="60dp"
                        android:layout_height="75dp"
                        android:text="@string/anjian_sh" />

                    <Button
                        android:id="@+id/anjian_z"
                        android:layout_width="60dp"
                        android:layout_height="75dp"
                        android:text="@string/anjian_z" />

                    <Button
                        android:id="@+id/anjian_c"
                        android:layout_width="60dp"
                        android:layout_height="75dp"
                        android:text="@string/anjian_c" />

                    <Button
                        android:id="@+id/anjian_s"
                        android:layout_width="60dp"
                        android:layout_height="75dp"
                        android:text="@string/anjian_s" />

                    <Button
                        android:id="@+id/anjian_r"
                        android:layout_width="60dp"
                        android:layout_height="75dp"
                        android:text="@string/anjian_r" />

                    <Button
                        android:id="@+id/anjian_m"
                        android:layout_width="60dp"
                        android:layout_height="75dp"
                        android:text="@string/anjian_m" />

                    <Button
                        android:id="@+id/anjian_n"
                        android:layout_width="60dp"
                        android:layout_height="75dp"
                        android:text="@string/anjian_n" />

                    <Button
                        android:id="@+id/anjian_y"
                        android:layout_width="60dp"
                        android:layout_height="75dp"
                        android:text="@string/anjian_y" />

                    <Button
                        android:id="@+id/anjian_w"
                        android:layout_width="60dp"
                        android:layout_height="75dp"
                        android:text="@string/anjian_w" />

                </LinearLayout>

            </ScrollView>


            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="450dp"
                android:orientation="vertical"/>


            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="450dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/anjian_a"
                    android:layout_width="60dp"
                    android:layout_height="75dp"
                    android:text="@string/anjian_a" />

                <Button
                    android:id="@+id/anjian_o"
                    android:layout_width="60dp"
                    android:layout_height="75dp"
                    android:text="@string/anjian_o" />

                <Button
                    android:id="@+id/anjian_e"
                    android:layout_width="60dp"
                    android:layout_height="75dp"
                    android:text="@string/anjian_e" />

                <Button
                    android:id="@+id/anjian_i"
                    android:layout_width="60dp"
                    android:layout_height="75dp"
                    android:text="@string/anjian_i" />

                <Button
                    android:id="@+id/anjian_u"
                    android:layout_width="60dp"
                    android:layout_height="75dp"
                    android:text="@string/anjian_u" />

                <Button
                    android:id="@+id/anjian_v"
                    android:layout_width="60dp"
                    android:layout_height="75dp"
                    android:text="@string/anjian_v" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="450dp"
                android:orientation="vertical"/>


            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="450dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/anjian_ng"
                    android:layout_width="60dp"
                    android:layout_height="75dp"
                    android:text="@string/anjian_ng" />

                <Button
                    android:id="@+id/anjian_n2"
                    android:layout_width="60dp"
                    android:layout_height="75dp"
                    android:text="@string/anjian_n2" />

                <RadioGroup
                    android:id="@+id/emotion_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:orientation="vertical">
                    <RadioButton
                        android:id="@+id/emotion_original"
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:checked="true"
                        android:text="@string/emotion_original"
                        android:textSize="12dp"/>
                    <RadioButton
                        android:id="@+id/emotion_happy"
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:text="@string/emotion_happy"
                        android:textSize="12dp"/>
                    <RadioButton
                        android:id="@+id/emotion_sad"
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:text="@string/emotion_sad"
                        android:textSize="12dp"/>
                    <RadioButton
                        android:id="@+id/emotion_angry"
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:text="@string/emotion_angry"
                        android:textSize="12dp"/>
                </RadioGroup>
            </LinearLayout>


            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="450dp"
                android:orientation="vertical"/>


            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="450dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/anjian_1"
                    android:layout_width="60dp"
                    android:layout_height="75dp"
                    android:text="@string/anjian_1" />

                <Button
                    android:id="@+id/anjian_2"
                    android:layout_width="60dp"
                    android:layout_height="75dp"
                    android:text="@string/anjian_2" />

                <Button
                    android:id="@+id/anjian_3"
                    android:layout_width="60dp"
                    android:layout_height="75dp"
                    android:text="@string/anjian_3" />

                <Button
                    android:id="@+id/anjian_4"
                    android:layout_width="60dp"
                    android:layout_height="75dp"
                    android:text="@string/anjian_4" />

                <Button
                    android:id="@+id/anjian_5"
                    android:layout_width="60dp"
                    android:layout_height="75dp"
                    android:text="@string/anjian_5" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/yuyin_btn_qian_word"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:text="@string/yuyin_btn_qian_word" />

            <Button
                android:id="@+id/yuyin_btn_hou_word"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:text="@string/yuyin_btn_hou_word" />

            <Button
                android:id="@+id/yuyin_btn_delete_letter"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:text="@string/yuyin_btn_delete_letter" />

            <Button
                android:id="@+id/yuyin_btn_delete_word"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:text="@string/yuyin_btn_delete_word" />

            <Button
                android:id="@+id/yuyin_btn_other"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:text="@string/yuyin_btn_other" />

            <Button
                android:id="@+id/yuyin_btn_back"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:text="@string/yuyin_btn_back" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>